Bug 453187 - The new HSV color selector expands the specific color selector docker every time it switches between RGB/HSV
Summary: The new HSV color selector expands the specific color selector docker every t...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Dockers (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Compiled Sources All
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-04-29 10:30 UTC by acc4commissions
Modified: 2022-05-02 20:17 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description acc4commissions 2022-04-29 10:30:00 UTC
SUMMARY
git caf9f20

The title says it all. It's reducable after, but the docker expands again when the switching happens.

STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 littlelightlittlefire 2022-04-29 11:07:56 UTC
Thanks for reporting, I've put together a MR to fix: https://invent.kde.org/graphics/krita/-/merge_requests/1436
Please test this build if you can.
Comment 2 Eoin O'Neill 2022-05-02 20:17:32 UTC
Git commit 6e2e5ffca2d08a9e0b7ff56bf25cc0ed53a852d3 by Eoin O'Neill, on behalf of Sam Linnfer.
Committed on 02/05/2022 at 20:15.
Pushed by eoinoneill into branch 'master'.

Fixes Specific Color Picker docker from expanding when switching between HSV/RGB

The previous code sets the RGB sliders to visible, then hides the HSV
sliders. For a split second, the docker is expanded due to the sliders
being doubled up. This makes it appear that docker had bloated.

The bug occurs when the Specific Color Selector is in a floating state
and squished as small as it can be, then switching from HSV to RGB
causes it to expand slightly.

M  +2    -2    plugins/dockers/specificcolorselector/kis_specific_color_selector_widget.cc

https://invent.kde.org/graphics/krita/commit/6e2e5ffca2d08a9e0b7ff56bf25cc0ed53a852d3